--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manish7377.github.io/teleparty-assignment",
+  "homepage": "https://manish7377.github.io/teleparty-assignment/",
   "name": "test",
   "version": "0.1.0",
   "private": true,
